--- a/HomeRobot.cabal
+++ b/HomeRobot.cabal
@@ -19,6 +19,7 @@ executable HomeRobot
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13
+  build-depends:       base >=4.12 && <4.13,
+                       random >= 1.1
   hs-source-dirs:      src
   default-language:    Haskell2010
