--- a/HomeRobot.cabal
+++ b/HomeRobot.cabal
@@ -17,9 +17,10 @@ cabal-version:       >=1.10
 
 executable HomeRobot
   main-is:             Main.hs
-  -- other-modules:
+  other-modules: Types Utils Child Robot    
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13,
-                       random >= 1.1
+                       random >= 1.1,
+                       containers
   hs-source-dirs:      src
   default-language:    Haskell2010
